Korboee z-index fix

--- a/app/styles/korboee/korboee-styles.less
+++ b/app/styles/korboee/korboee-styles.less
@@ -7,6 +7,16 @@
 	padding: 0px 0px 0px 0px;
 	border-top: 4px solid @gray-light;
 	}
+
+.kee-modal-container {
+	z-index: 100000901;
+}
+.pnd-dropdown-contextual-menu {
+	z-index: 100000902;
+}
+.pnd-confirm-modal-container {
+	z-index: 100000903;
+}
 	
 
 //
